--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -1305,7 +1305,6 @@ Default: empty
 [[content.print_element_backgrounds]]
 == content.print_element_backgrounds
 Whether the background color and images are also drawn when the page is printed.
-# FIXME:conf This should be added automatically: # This setting only works with Qt 5.8 or newer when using the QtWebEngine backend.
 
 Valid values:
 
@@ -1313,6 +1312,8 @@ Valid values:
  * +false+
 
 Default: +pass:[true]+
+
+On QtWebEngine, this setting requires Qt 5.8 or newer.
 
 [[content.private_browsing]]
 == content.private_browsing
@@ -1329,7 +1330,6 @@ Default: empty
 == content.proxy
 The proxy to use.
 In addition to the listed values, you can use a `socks://...` or `http://...` URL.
-# FIXME:conf This should be added automatically: # This setting only works with Qt 5.8 or newer when using the QtWebEngine # backend.
 
 Valid values:
 
@@ -1337,6 +1337,8 @@ Valid values:
  * +none+: Don't use any proxy
 
 Default: +pass:[system]+
+
+On QtWebEngine, this setting requires Qt 5.8 or newer.
 
 [[content.proxy_dns_requests]]
 == content.proxy_dns_requests
